<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relative"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sunil.pizzastore.MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView_pizza"
        android:src="@drawable/pizza"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_checkout"
        android:id="@+id/button_checkout"

        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="@dimen/activity_apptop"
        android:layout_height="wrap_content"
        android:text="@string/string_addtopping"
        android:id="@+id/button_addtopping"

        android:layout_above="@+id/button_checkout"

        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_clearpizza"
        android:id="@+id/button_clearpizza"
        android:layout_toEndOf="@+id/button_addtopping"
        android:layout_alignTop="@+id/button_addtopping"
        android:onClick="onClick_clear"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_above="@+id/imageView_pizza">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:gravity="center_horizontal"
            android:id="@+id/layout1">

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:gravity="center_horizontal"
            android:id="@+id/layout2"></LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/button_addtopping"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="10"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/String_load"
        android:id="@+id/checkBox_loadPrevious"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/progressBar"
        android:layout_below="@+id/imageView_pizza" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery"
        android:id="@+id/checkBox_Delivery"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView_pizza"
        android:layout_above="@+id/progressBar"
        android:layout_toEndOf="@+id/checkBox_loadPrevious" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="463dp" />


</RelativeLayout>
